--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "buffer": "^6.0.3",
     "form-data": "^4.0.0",
     "tweetnacl": "^1.0.3",
+    "tweetnacl-util": "^0.15.1",
     "util": "^0.12.5"
   }
 }
