--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "module": "dist/index.js",
   "type": "module",
   "scripts": {
-    "build": "tsc",
-    "build:browser": "rollup -c",
+    "build": "npm run prepare && tsc",
+    "build:browser": "npm run prepare && rollup -c",
+    "prepare": "ts-patch install && typia patch",
     "test": "echo \"Error: no test specified\" && exit 1",
     "example": "npx ts-node --esm examples/example.ts",
     "publish:public": "npm version patch && npm run build && npm run build:browser && npm publish --access public"
@@ -51,8 +52,10 @@
     "bs58": "^5.0.0",
     "buffer": "^6.0.3",
     "form-data": "^4.0.0",
+    "ts-patch": "^3.2.1",
     "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.15.1",
+    "typia": "^6.11.0",
     "util": "^0.12.5"
   }
 }
