use node:20.11.1 in gitlab ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@
 #  | | | | (_) \__ \ (_| | | | | (_| |
 #  |_| |_|\___/|___/\__,_|_| |_|\__,_|
 
-image: node:latest
+image: node:20.11.1
 
 stages:
   - deploy
