--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "bs58": "^5.0.0",
     "buffer": "^6.0.3",
     "form-data": "^4.0.0",
+    "mongodb": "6.15",
     "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.15.1",
     "typia": "^7.6.4",
