--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nosana/sdk",
-  "version": "0.4.9-rc.3",
+  "version": "0.4.9",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
