--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,4 @@ node_modules
 yarn-error.log
 dist
 
-src/services/api/client/schema.d.ts
-src/services/deployments/client/schema.d.ts
+src/client/schema.d.ts
