--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build": "npm run generate && npm run prepare && tsc && npm run build:generate",
     "build:browser": "npm run prepare && rollup -c",
     "build:generate": "openapi-typescript https://dashboard.k8s.prd.nos.ci/api/swagger/json -o ./dist/client/schema.d.ts",
+    "build:local": "npm run generate:local && npm run prepare && tsc",
     "generate": "openapi-typescript https://dashboard.k8s.prd.nos.ci/api/swagger/json -o ./src/client/schema.d.ts",
     "generate:dev": "openapi-typescript https://dashboard.k8s.dev.nos.ci/api/swagger/json -o ./src/client/schema.d.ts",
     "generate:local": "openapi-typescript http://localhost:3001/documentation/json -o ./src/client/schema.d.ts",
